# app/Http/Controllers/Api/V1/LoginController.php
@@ -12,7 +12,7 @@ class LoginController extends Controller
 {
     /**
      * @OA\Post(
-     *      path="/v1/login",operationId="LoginUser",tags={"Users"},description="login the user",
+     *      path="/api/login",operationId="LoginUser",tags={"Users"},description="login the user",
      *      @OA\RequestBody(required=true,@OA\JsonContent(ref="#/components/schemas/LoginData"),),
      *      @OA\Response(response=200,description="Successful operation",),
      *      @OA\Response(response=401,description="Unauthenticated",),
