# app/Http/Controllers/Api/V1/TravelController.php
@@ -14,7 +14,7 @@ class TravelController extends Controller
 {
     /**
      * @OA\Get(
-     *      path="/travels",
+     *      path="/api/travels",
      *      operationId="getTravelsList",
      *      tags={"Travels"},
      *      summary="Get list of travels",
@@ -35,7 +35,7 @@ class TravelController extends Controller
 
     /**
      * @OA\Post(
-     *      path="/travels",operationId="storeTravel",tags={"TravelParts"},description="store new travel request",
+     *      path="/api/travels",operationId="storeTravel",tags={"TravelParts"},description="store new travel request",
      *      @OA\RequestBody(required=true,@OA\JsonContent(ref="#/components/schemas/TravelData")),
      *      @OA\Response(response=200,description="Successful operation",),
      *      @OA\Response(response=401,description="Unauthenticated",),
@@ -57,7 +57,7 @@ class TravelController extends Controller
 
     /**
      * @OA\Put(
-     *      path="/travels/{travel}/update",operationId="updateTravel",tags={"TravelParts"},description="update delivery part",
+     *      path="/api/travels/{travel}/update",operationId="updateTravel",tags={"TravelParts"},description="update delivery part",
      *      @OA\Parameter(name="travel",description="travel_id of the Travel",required=true, in="path",@OA\Schema(type="integer",example=1)),
      *      @OA\RequestBody(required=true,@OA\JsonContent(ref="#/components/schemas/TravelData"),),
      *      @OA\Response(response=200,description="Successful operation"),
